[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros"] }
bytes = "1.9.0"
dashmap = "6.1.0"
humansize = "2.1.3"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
sync_wrapper = "1.0.2"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
